--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,19 @@
     box-sizing: border-box;
 }
 
-.light-theme {
+body {
+    font-family: Arial, sans-serif;
+    background-color: red !important;
+    color: #333;
+    transition: background-color 0.3s, color 0.3s;
+    overflow-x: hidden;
+}
+
+/* .light-theme {
     background-color: #ffffff;
     color: #000000;
     transition: background-color 0.3s, color 0.3s;
-  }
+  } */
   
   /* Dark Theme */
   .dark-theme {
@@ -20,31 +28,31 @@
   }
   
   /* Apply to all elements */
-  .light-theme body, 
+  /* .light-theme body, 
   .light-theme .container {
     background-color: #ffffff;
     color: #000000;
-  }
+  } */
   
-  .dark-theme body, 
+  /* .dark-theme body, 
   .dark-theme .container {
     background-color: #121212;
     color: #ffffff;
-  }
+  } */
   
   /* Navbar Styling */
   .light-theme .navbar {
-    background-color: #f8f9fa;
-    color: #000000;
+    /* background-color: #f8f9fa; */
+    /* color: #000000; */
   }
   
   .dark-theme .navbar {
-    background-color: #1f1f1f;
-    color: #ffffff;
+    /* background-color: #1f1f1f; */
+    /* color: #ffffff; */
   }
   
   /* Button Styling */
-  .light-theme .btn {
+  /* .light-theme .btn {
     background-color: #007bff;
     color: white;
   }
@@ -52,5 +60,5 @@
   .dark-theme .btn {
     background-color: #0d6efd;
     color: white;
-  }
+  } */
   
